@startuml
package com.csl.factory {
    abstract class Operation {
        - numberA : double
        - numberB : double
        + getResult() : double
    }
    class OperationAdd {
        + getResult() : double
    }
    class OperationSub {
        + getResult() : double
    }
    class OperationMul {
        + getResult() : double
    }
    class OperationDiv {
        + getResult() : double
    }
    class OperationFactory {
        - OperationFactory()
        + {static} createOperation(char op) : Operation
    }
}
package com.csl.strategy {
    class OperationContext {
        - strategy : Operation
        + OperationContext(Operation initializeStrategy)
        + changeStrategy(Operation strategy) : void
        + executeStrategy(int x, int y) : int
    }
}
note bottom of Operation : Omit getter and setter
OperationAdd --|> Operation
OperationSub --|> Operation
OperationMul --|> Operation
OperationDiv --|> Operation
OperationFactory ..> Operation
OperationContext --> Operation
@enduml
